Fix rubocop issues

--- a/xcode-install/Gemfile
+++ b/xcode-install/Gemfile
@@ -3,10 +3,7 @@ source 'https://rubygems.org'
 gemspec
 
 group :development do
-  gem 'bacon'
-  gem 'mocha-on-bacon'
-  gem 'mocha', '~> 0.11.4'
-  gem 'prettybacon'
+  gem 'rspec'
   gem 'rubocop', '0.38.0'
   gem 'coveralls', require: false
 end
