--- a/xcode-install/Gemfile
+++ b/xcode-install/Gemfile
@@ -4,6 +4,7 @@ gemspec
 
 group :development do
   gem 'rspec'
+  gem 'rspec_junit_formatter'
   gem 'rubocop', '0.38.0'
   gem 'coveralls', require: false
 end
