Set max value of Metrics/ModuleLength in .rubocop.yml

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -79,6 +79,8 @@ Style/AndOr:
 Metrics/ClassLength:
   Max: 320
 
+Metrics/ModuleLength:
+  Max: 130
 
 # Configuration parameters: AllowURI, URISchemes.
 Metrics/LineLength:
