--- a/frameit/frames_generator/Rakefile
+++ b/frameit/frames_generator/Rakefile
@@ -1,4 +1,3 @@
-require 'fileutils'
 require 'colored'
 require 'mini_magick'
 require 'json'
@@ -9,13 +8,17 @@ DEVICES_TO_SKIP = [
 ]
 
 task :generate_device_frames do
+  MiniMagick.configure do |config|
+    config.validate_on_create = false
+  end
+
   puts "Download and extract the latest devices from Facebook"
   puts ""
   puts "  http://facebook.design/devices"
   puts ""
   confirm
   puts "Move the content of the zip file into './raw'"
-  FileUtils.mkdir("raw") unless File.directory?("raw")
+  mkdir("raw") unless File.directory?("raw")
   system("open ./raw")
   confirm
 
@@ -23,13 +26,13 @@ task :generate_device_frames do
   current_time = Time.now.to_i.to_s
   output = File.join("output", current_time)
   sh "rm -rf output"
-  FileUtils.mkdir_p(output) unless File.directory?(output)
+  mkdir_p(output) unless File.directory?(output)
 
   image_assets = []
   (Dir["raw/Phones/Apple*/Device/*.png"] + Dir["raw/Computers/Apple*/Device/*.png"] + Dir["raw/Tablets/Apple*/Device/*.png"]).each do |current_raw|
     next if DEVICES_TO_SKIP.include?(File.basename(current_raw))
 
-    FileUtils.cp(current_raw, output)
+    cp(current_raw, output)
 
     output_file_path = File.join(output, File.basename(current_raw))
     convert_image_resource(output_file_path)
@@ -44,10 +47,10 @@ task :generate_device_frames do
   File.write(File.join(output, "version.txt"), current_time)
   puts "Wrote the current time stamp to version.txt"
 
-  FileUtils.cp("offsets.json", File.join(output, "offsets.json"))
+  cp("offsets.json", File.join(output, "offsets.json"))
   puts "Copied over offsets.json"
 
-  FileUtils.cp_r(output, File.join("output/latest"))
+  cp_r(output, "output/latest")
 
   system("open ./output")
   puts "Done writing all the things to './output', please upload both the 'latest' and the time stamp '#{current_time}' folder to GitHub".green
@@ -57,16 +60,12 @@ task :generate_device_frames do
 end
 
 def confirm
-  puts "Confirm when complete with the last step".yellow
+  puts "Press any key when you're ready to continue".yellow
   gets
 end
 
 # This will remove the white space around the actual frame
 def convert_image_resource(path)
-  MiniMagick.configure do |config|
-    config.validate_on_create = false
-  end
-
   puts "Updating and trimming image file '#{path}'"
   image = MiniMagick::Image.open(path)
   image.trim
