--- a/spaceship/spec/tunes/fixtures/app_version.json
+++ b/spaceship/spec/tunes/fixtures/app_version.json
@@ -353,7 +353,7 @@
                                     "errorKeys": null
                                 },
                                 "messagesScaled": {
-                                    "value": false,
+                                    "value": true,
                                     "isEditable": true,
                                     "isRequired": false,
                                     "errorKeys": null
