fix language locale error

--- a/spaceship/lib/assets/languageMapping.json
+++ b/spaceship/lib/assets/languageMapping.json
@@ -2,12 +2,14 @@
     {
         "locale": "cmn-Hans",
         "name": "Simplified Chinese",
-        "game-center": true
+        "game-center": true,
+        "itc_locale": "zh-Hans"        
     },
     {
         "locale": "cmn-Hant",
         "name": "Traditional Chinese",
-        "game-center": true
+        "game-center": true,
+        "itc_locale": "zh-Hant"
     },
     {
         "locale": "da-DK",
@@ -15,7 +17,8 @@
         "game-center": true,
         "alternatives": [
             "da"
-        ]
+        ],
+        "itc_locale": "da"
     },
     {
         "locale": "nl-NL",
@@ -23,42 +26,50 @@
         "game-center": true,
         "alternatives": [
             "nl"
-        ]
+        ],
+        "itc_locale": "nl-NL"
     },
     {
         "locale": "en-AU",
         "name": "Australian English",
-        "game-center": false
+        "game-center": false,
+        "itc_locale": "en-AU"
     },
     {
         "locale": "en-AU",
         "name": "English_Australian",
-        "game-center": false
+        "game-center": false,
+        "itc_locale": "en-AU"
     },
     {
         "locale": "en-CA",
         "name": "Canadian English",
-        "game-center": false
+        "game-center": false,
+        "itc_locale": "en-CA"
     },
     {
         "locale": "en-CA",
         "name": "English_CA",
-        "game-center": false
+        "game-center": false,
+        "itc_locale": "en-CA"
     },
     {
         "locale": "en-GB",
         "name": "UK English",
-        "game-center": true
+        "game-center": true,
+        "itc_locale": "en-GB"
     },
     {
         "locale": "en-GB",
         "name": "English_UK",
-        "game-center": true
+        "game-center": true,
+        "itc_locale": "en-GB"
     },
     {
         "locale": "en-US",
         "name": "English",
-        "game-center": true
+        "game-center": true,
+        "itc_locale": "en-US"
     },
     {
         "locale": "fi-FI",
@@ -66,17 +77,20 @@
         "game-center": true,
         "alternatives": [
             "fi"
-        ]
+        ],
+        "itc_locale": "fin"
     },
     {
         "locale": "fr-CA",
         "name": "Canadian French",
-        "game-center": false
+        "game-center": false,
+        "itc_locale": "fr-CA"
     },
     {
         "locale": "fr-CA",
         "name": "French_CA",
-        "game-center": false
+        "game-center": false,
+        "itc_locale": "fr-CA"
     },
     {
         "locale": "fr-FR",
@@ -84,7 +98,8 @@
         "game-center": true,
         "alternatives": [
             "fr"
-        ]
+        ],
+        "itc_locale": "fr-FR"
     },
     {
         "locale": "de-DE",
@@ -92,7 +107,8 @@
         "game-center": true,
         "alternatives": [
             "de"
-        ]
+        ],
+        "itc_locale": "de-DE"
     },
     {
         "locale": "el-GR",
@@ -100,7 +116,8 @@
         "game-center": true,
         "alternatives": [
             "el"
-        ]
+        ],
+        "itc_locale": "el"
     },
     {
         "locale": "id-ID",
@@ -108,7 +125,8 @@
         "game-center": true,
         "alternatives": [
             "id"
-        ]
+        ],
+        "itc_locale": "id"
     },
     {
         "locale": "it-IT",
@@ -116,7 +134,8 @@
         "game-center": true,
         "alternatives": [
             "it"
-        ]
+        ],
+        "itc_locale": "it"
     },
     {
         "locale": "ja-JP",
@@ -124,7 +143,8 @@
         "game-center": true,
         "alternatives": [
             "ja"
-        ]
+        ],
+        "itc_locale": "ja"
     },
     {
         "locale": "ko-KR",
@@ -132,7 +152,8 @@
         "game-center": true,
         "alternatives": [
             "ko"
-        ]
+        ],
+        "itc_locale": "ko"
     },
     {
         "locale": "ms-MY",
@@ -140,7 +161,8 @@
         "game-center": true,
         "alternatives": [
             "ms"
-        ]
+        ],
+        "itc_locale": "ms"
     },
     {
         "locale": "no-NO",
@@ -148,12 +170,14 @@
         "game-center": true,
         "alternatives": [
             "no"
-        ]
+        ],
+        "itc_locale": "no"
     },
     {
         "locale": "pt-BR",
         "name": "Brazilian Portuguese",
-        "game-center": true
+        "game-center": true,
+        "itc_locale": "pt-BR"
     },
     {
         "locale": "pt-PT",
@@ -161,7 +185,8 @@
         "game-center": true,
         "alternatives": [
             "pt"
-        ]
+        ],
+        "itc_locale": "pt-PT"
     },
     {
         "locale": "ru-RU",
@@ -169,17 +194,20 @@
         "game-center": true,
         "alternatives": [
             "ru"
-        ]
+        ],
+        "itc_locale": "ru"
     },
     {
         "locale": "es-MX",
         "name": "Mexican Spanish",
-        "game-center": false
+        "game-center": false,
+        "itc_locale": "es-MX"
     },
     {
         "locale": "es-MX",
         "name": "Spanish_MX",
-        "game-center": false
+        "game-center": false,
+        "itc_locale": "es-MX"
     },
     {
         "locale": "es-ES",
@@ -187,7 +215,8 @@
         "game-center": true,
         "alternatives": [
             "es"
-        ]
+        ],
+        "itc_locale": "es-ES"
     },
     {
         "locale": "sv-SE",
@@ -195,7 +224,8 @@
         "game-center": true,
         "alternatives": [
             "sv"
-        ]
+        ],
+        "itc_locale": "sv"
     },
     {
         "locale": "th-TH",
@@ -203,7 +233,8 @@
         "game-center": true,
         "alternatives": [
             "th"
-        ]
+        ],
+        "itc_locale": "th"
     },
     {
         "locale": "tr-TR",
@@ -211,7 +242,8 @@
         "game-center": true,
         "alternatives": [
             "tr"
-        ]
+        ],
+        "itc_locale": "tr"
     },
     {
         "locale": "vi-VI",
@@ -219,6 +251,7 @@
         "game-center": true,
         "alternatives": [
             "vi"
-        ]
+        ],
+        "itc_locale": "vi"
     }
 ]
