--- a/gym/examples/commandline/cocoaapp/Info.plist
+++ b/gym/examples/commandline/cocoaapp/Info.plist
@@ -23,7 +23,7 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2016 hjanuschka. All rights reserved.</string>
+	<string>Copyright by fastlane</string>
 	<key>NSMainStoryboardFile</key>
 	<string>Main</string>
 	<key>NSPrincipalClass</key>
