Add link to CONTRIBUTING.md

--- a/.assets/Gemfile
+++ b/.assets/Gemfile
@@ -1,3 +1,5 @@
+# More information about how to use this file in [CONTRIBUTING.md](CONTRIBUTING.md)
+
 source "https://rubygems.org"
 
 local_fastlane_path = "<YOUR_LOCAL_FASTLANE_CLONE>"
