Increase ulimit to prevent issues with too many open files
`/Users/distiller/.gem/ruby/2.3.1/gems/coveralls-0.8.17/lib/coveralls/output.rb:63:in `require': Too many open files - getcwd (Errno::EMFILE)`

--- a/circle.yml
+++ b/circle.yml
@@ -7,6 +7,8 @@ dependencies:
   override:
     - bundle install --jobs=4 --retry=3
 test:
+  pre:
+    - ulimit -n 400
   override:
     - bundle exec rspec -r rspec_junit_formatter --format progress --format RspecJunitFormatter -o $CIRCLE_TEST_REPORTS/rspec/junit.xml
     - bundle exec rubocop
