--- a/circle.yml
+++ b/circle.yml
@@ -4,6 +4,8 @@ machine:
   xcode:
     version: "7.3"
 dependencies:
+  pre:
+    - brew install shellcheck
   override:
     - bundle install --jobs=4 --retry=3
 test:
@@ -12,3 +14,4 @@ test:
   override:
     - bundle exec rspec -r rspec_junit_formatter --format progress --format RspecJunitFormatter -o $CIRCLE_TEST_REPORTS/rspec/junit.xml
     - bundle exec rubocop
+    - find -E . -regex ".*\.(sh|bash)" -not -name "Pods-*" -exec shellcheck {} +
