--- a/circle.yml
+++ b/circle.yml
@@ -12,6 +12,4 @@ test:
   pre:
     - ulimit -n 400
   override:
-    - bundle exec rspec -r rspec_junit_formatter --format progress --format RspecJunitFormatter -o $CIRCLE_TEST_REPORTS/rspec/junit.xml
-    - bundle exec rubocop
-    - find -E . -regex ".*\.(sh|bash)" -not -name "Pods-*" -exec shellcheck {} +
+    - bundle exec fastlane test
