Update .gitignore to not have any user specific Xcode config files

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,17 @@ spec/fixtures/*.itmsp/*.png
 **/report.xml
 **/.bundle
 fastlane/lib/fastlane/plugins/template/.rubocop.yml
+
+# iOS specific ignores, used in sample projects inside the repo
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata/
+*.moved-aside
+*.xccheckout
+*.xcscmblueprint
