--- a/circle.yml
+++ b/circle.yml
@@ -12,6 +12,6 @@ test:
   pre:
     - ulimit -n 400
   override:
-    - bundle exec danger # for quick, instant feedback of PR body and title
+    - bundle exec danger || echo "danger failed, moving on" # for quick, instant feedback of PR body and title
     - bundle exec fastlane test
-    - bundle exec danger # for posting the test results to GitHub
+    - bundle exec danger || echo "danger failed, moving on # for posting the test results to GitHub
