Fix syntax error

--- a/circle.yml
+++ b/circle.yml
@@ -14,4 +14,4 @@ test:
   override:
     - bundle exec danger || echo "danger failed, moving on" # for quick, instant feedback of PR body and title
     - bundle exec fastlane test
-    - bundle exec danger || echo "danger failed, moving on # for posting the test results to GitHub
+    - bundle exec danger || echo "danger failed, moving on" # for posting the test results to GitHub
