Re-enable shellcheck

--- a/circle.yml
+++ b/circle.yml
@@ -5,7 +5,7 @@ machine:
     version: "7.3"
 dependencies:
   pre:
-    # - brew install shellcheck
+    - brew install shellcheck
   override:
     - bundle install --jobs=4 --retry=3
 test:
